# TemplateForCPP

./: CMakeLists.txt  LICENSE  README.md  main.cc
docs/: CMakeLists.txt
src/: CMakeLists.txt  DummyTarget.cc  DummyTarget.hh
tests/: CMakeLists.txt  DummyTest.cc
